; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/esas2r/extr_esas2r_ioctl.c_handle_hba_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/esas2r/extr_esas2r_ioctl.c_handle_hba_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.esas2r_adapter = type { i32 }
%struct.atto_ioctl = type { i64 }
%struct.esas2r_buffered_ioctl = type { i64, i32*, i32, i32*, i32, i64, %struct.atto_ioctl*, %struct.esas2r_adapter* }

@hba_ioctl_callback = common dso_local global i32 0, align 4
@hba_ioctl_done_callback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @handle_hba_ioctl(%struct.esas2r_adapter* %0, %struct.atto_ioctl* %1) #0 {
  %3 = alloca %struct.esas2r_adapter*, align 8
  %4 = alloca %struct.atto_ioctl*, align 8
  %5 = alloca %struct.esas2r_buffered_ioctl, align 8
  store %struct.esas2r_adapter* %0, %struct.esas2r_adapter** %3, align 8
  store %struct.atto_ioctl* %1, %struct.atto_ioctl** %4, align 8
  %6 = call i32 @memset(%struct.esas2r_buffered_ioctl* %5, i32 0, i32 64)
  %7 = load %struct.esas2r_adapter*, %struct.esas2r_adapter** %3, align 8
  %8 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 7
  store %struct.esas2r_adapter* %7, %struct.esas2r_adapter** %8, align 8
  %9 = load %struct.atto_ioctl*, %struct.atto_ioctl** %4, align 8
  %10 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 6
  store %struct.atto_ioctl* %9, %struct.atto_ioctl** %10, align 8
  %11 = load %struct.atto_ioctl*, %struct.atto_ioctl** %4, align 8
  %12 = getelementptr inbounds %struct.atto_ioctl, %struct.atto_ioctl* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = add i64 8, %13
  %15 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 5
  store i64 %14, i64* %15, align 8
  %16 = load i32, i32* @hba_ioctl_callback, align 4
  %17 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 4
  store i32 %16, i32* %17, align 8
  %18 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 3
  store i32* null, i32** %18, align 8
  %19 = load i32, i32* @hba_ioctl_done_callback, align 4
  %20 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 2
  store i32 %19, i32* %20, align 8
  %21 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 1
  store i32* null, i32** %21, align 8
  %22 = getelementptr inbounds %struct.esas2r_buffered_ioctl, %struct.esas2r_buffered_ioctl* %5, i32 0, i32 0
  store i64 0, i64* %22, align 8
  %23 = call i32 @handle_buffered_ioctl(%struct.esas2r_buffered_ioctl* %5)
  ret i32 %23
}

declare dso_local i32 @memset(%struct.esas2r_buffered_ioctl*, i32, i32) #1

declare dso_local i32 @handle_buffered_ioctl(%struct.esas2r_buffered_ioctl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
